fix: z-index issue

--- a/components/Landing/Navbar/HamBtn/HamMenu/hamMenu.module.scss
+++ b/components/Landing/Navbar/HamBtn/HamMenu/hamMenu.module.scss
@@ -92,7 +92,7 @@
 .mobileHamMenuLines {
   position: absolute;
   scale: 0.35;
-  z-index: 5111;
+  z-index: 5121;
   width: 100%;
   height: 100%;
 
